--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Stylish Web App</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://apis.google.com/js/api:client.js"></script>
 </head>
 <body>
     <div class="container">
         <h1 class="company-name">Your Company Name</h1>
-        <button id="openLinkButton" class="styled-button">Open Link</button>
+        <button id="googleLoginButton" class="styled-button">Login with Google</button>
+        <button id="openLinkButton" class="styled-button" style="display: none;">Open Link</button>
     </div>
     <script src="script.js"></script>
 </body>
