--- a/index.html
+++ b/index.html
@@ -3,16 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Stylish Web App</title>
+    <title>Google OAuth App</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://apis.google.com/js/api:client.js"></script>
+    <!-- Google Platform Library -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
-    <div class="container">
-        <h1 class="company-name">Your Company Name</h1>
-        <button id="googleLoginButton" class="styled-button">Login with Google</button>
-        <button id="openLinkButton" class="styled-button" style="display: none;">Open Link</button>
+    <div id="g_id_onload"
+        data-client_id="YOUR_CLIENT_ID"
+        data-login_uri="http://localhost:YOUR_PORT"
+        data-callback="handleCredentialResponse"
+        data-auto_prompt="false">
     </div>
+
+    <div class="g_id_signin"
+        data-type="standard"
+        data-size="large"
+        data-theme="outline"
+        data-text="sign_in_with"
+        data-shape="rectangular"
+        data-logo_alignment="left">
+    </div>
+
+    <button id="openLinkButton" style="display: none;">Open Link</button>
+
     <script src="script.js"></script>
 </body>
 </html>
