--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1 class="company-name">Your Company Name</h1>
-        <div id="g_id_onload" data-client_id="YOUR_CLIENT_ID.apps.googleusercontent.com" data-callback="onSignIn"></div>
+        <div id="g_id_onload" data-client_id="751485603242-99q9u0sdfin7046mb2maour9epri8pot.apps.googleusercontent.com" data-callback="onSignIn"></div>
         <div class="g_id_signin" data-type="standard"></div>
         <button id="openLinkButton" class="styled-button" style="display: none;">Open Link</button>
     </div>
