--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
 </head>
 <body>
     <div class="container">
+        <h1 class="company-name">Interac App</h1>
         <div id="loginScreen">
-            <h1 class="company-name">Your Company Name</h1>
-            <div id="g_id_onload" data-client_id="751485603242-99q9u0sdfin7046mb2maour9epri8pot.apps.googleusercontent.com" data-callback="onSignIn"></div>
-            <div class="g_id_signin" data-type="standard"></div>
+            <button id="loginButton" class="styled-button">Login with Google</button>
         </div>
         <div id="appContent" style="display: none;">
             <h1 class="company-name">Welcome to the App!</h1>
             <button id="openLinkButton" class="styled-button">Open Link</button>
         </div>
     </div>
-    <script src="script.js"></script>
-</body>
-</html>
+    <script src="script.js"></script
