--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="company-name">Interac App</h1>
         <div id="loginScreen">
-            <button id="loginButton" class="styled-button">Login with Google</button>
+            <h1 class="company-name">Interac App</h1>
+            <button id="googleLoginButton" class="styled-button">Login with Google</button>
         </div>
         <div id="appContent" style="display: none;">
             <h1 class="company-name">Welcome to the App!</h1>
             <button id="openLinkButton" class="styled-button">Open Link</button>
         </div>
     </div>
-    <script src="script.js"></script
+    <script src="script.js"></script>
+</body>
+</html>
